--- a/.rubocop_fixme.yml
+++ b/.rubocop_fixme.yml
@@ -4,6 +4,7 @@ Security/MarshalLoad:
 
 Metrics/ClassLength:
   Exclude:
+    - 'app/models/hyrax/collection_type.rb'
     - 'app/controllers/hyrax/dashboard/collections_controller.rb'
     - 'app/controllers/hyrax/file_sets_controller.rb'
     - 'app/forms/hyrax/forms/permission_template_form.rb'
